--- a/mystyle.css
+++ b/mystyle.css
@@ -172,3 +172,56 @@ footer {
 #f{
 padding-left: 70%;
 }
+.contact{
+	padding-top: 4%;
+	text-align: center;
+	background-color: #de3820;
+	padding-bottom: 4%;
+}
+
+#contact-area{
+	background-color: white;
+	width:700px;
+	height:100px;
+	padding-right: 50%;
+}
+.white-box{
+    background-color: white;
+    height: 40%;
+    width: 50%;
+    margin-left: 25%;
+}
+#endava{
+	padding-top:4%;
+	font-family: sans-serif;
+	font-size: 35px;
+	padding-bottom: 2%;
+	color:grey;
+}
+#content {
+   width: 500px;
+   height: 500px;
+}
+
+#right {
+    display: inline-block;
+    width: 40%;
+    height: 100%;
+    float:right;
+}
+#left{
+    display: inline-block;
+    width: 40%;
+    height: 100%;
+    margin-bottom:15%;
+}
+#button2{
+    background-color: #1ec18b;
+    border: none;
+    color: white;
+    padding: 5px 65px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
